--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -1,6 +1,6 @@
 .share{
     width: 100%;
-    height: 170px;
+   
     border-radius: 10px;
     -webkit-box-shadow: 0px 3px 8px 1px rgba(0,0,0,0.58); 
 box-shadow: 0px 3px 8px 1px rgba(0,0,0,0.58);
@@ -67,4 +67,21 @@ box-shadow: 0px 3px 8px 1px rgba(0,0,0,0.58);
     cursor: pointer;
     color: white;
 }
+.shareImgContainer{
+    padding: 0 20px 10px 20px;
+    position: relative;
 
+}
+.shareImg{
+    width: 100%;
+    object-fit: cover;
+
+}
+.shareCancelImg{
+    position: absolute;
+    top: 0;
+    right: 20px;
+    cursor: pointer;
+    opacity: 0.8;
+
+}
